--- a/src/libcommon/CMakeLists.txt
+++ b/src/libcommon/CMakeLists.txt
@@ -2,12 +2,14 @@ CMAKE_MINIMUM_REQUIRED (VERSION 3.19)
 
 PROJECT ("GotoUnivers")
 
-ADD_DEFINITIONS("-Wall")
+ADD_DEFINITIONS("-g -O3 -Wall")
 
-INCLUDE_DIRECTORIES( ../libcommon/ )
+INCLUDE_DIRECTORIES( . )
 
 ADD_LIBRARY (common STATIC
     js_stack.c
     js_queue.c
     js_linked_list.c
+    js_hash_table.c
+    xxhash.c
     js_debug.c)
