버전 관리 추가
* 임시 버전으로 1.0.0 처리

--- a/clang/src/libcommon/CMakeLists.txt
+++ b/clang/src/libcommon/CMakeLists.txt
@@ -12,4 +12,6 @@ ADD_LIBRARY (common STATIC
     js_linked_list.c
     js_hash_table.c
     xxhash.c
+    libcommon.c
+    version.c
     js_debug.c)
